test/corpus/transactions.txt
================================================================================
Simple transactions
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  -30.00 USD

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test   ; comment in posting line

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency)))
      (posting
        account: (account)
        amount: (amount
          number: (unary_num_expr
            (number))
          currency: (currency)))))
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency)))
      (posting
        account: (account))))
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency)))
      (posting
        account: (account)
        comment: (comment)))))

================================================================================
Transaction with cost spec
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR {2012-12-12, "lot-name"}
    Assets:Test  30.00 EUR {30.00 USD}
    Assets:Test  30.00 EUR {30.00 # 20 USD}
    Assets:Test  30.00 {*}
    Assets:Test

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          date: (date)
          string: (string)))
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))))
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            number_total: (number)
            currency: (currency))))
      (posting
        account: (account)
        amount: (incomplete_amount
          number: (number))
        cost_spec: (cost
          merge: (merge)))
      (posting
        account: (account)))))

================================================================================
Transaction
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  30.00
    Assets:Test  30.00 {}
    Assets:Test  30.00 EUR {} @
    Assets:Test  30.00 {} @@
    Assets:Test  30.00 {{}} @@
    Assets:Test  10.00 EUR {20.00 USD} @ 20.00 USD
    Assets:Test  EUR
    Assets:Test

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency)))
      (posting
        account: (account)
        amount: (incomplete_amount
          number: (number)))
      (posting
        account: (account)
        amount: (incomplete_amount
          number: (number))
        cost_spec: (cost))
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost)
        price_annotation: (price_annotation))
      (posting
        account: (account)
        amount: (incomplete_amount
          number: (number))
        cost_spec: (cost)
        price_annotation: (total_price_annotation))
      (posting
        account: (account)
        amount: (incomplete_amount
          number: (number))
        cost_spec: (total_cost)
        price_annotation: (total_price_annotation))
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency)))
        price_annotation: (price_annotation
          (amount
            number: (number)
            currency: (currency))))
      (posting
        account: (account)
        amount: (incomplete_amount
          currency: (currency)))
      (posting
        account: (account)))))

================================================================================
Transaction with posting flag
================================================================================

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    S Assets:Test  30.00
    T Assets:Test  30.00

2012-12-12 * "asdf" #tag
    S Assets:Test  30.00

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency)))
      (posting
        flag: (flag)
        account: (account)
        amount: (incomplete_amount
          number: (number)))
      (posting
        flag: (flag)
        account: (account)
        amount: (incomplete_amount
          number: (number)))))
  (transaction
    date: (date)
    flag: (flag)
    narration: (string)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        flag: (flag)
        account: (account)
        amount: (incomplete_amount
          number: (number))))))

================================================================================
Transactions from booking_full_test
================================================================================

2015-01-01 * #ante
  Assets:Account          -1 HOOL {110.00 USD, 2015-10-02}

2015-02-22 * #apply
  Assets:Account           2 HOOL {112.00 USD}

2015-02-22 * #reduced
  Assets:Account           1 HOOL {110.00 USD, 2015-02-22}

2015-02-22 * #booked
  Assets:Account           1 HOOL {110.00 USD, 2015-10-02}
  Assets:Account           1 HOOL {112.00 USD, 2015-02-22}

2015-01-01 * #ex
  Assets:Account           1 HOOL {112.00 USD, 2015-02-22}

--------------------------------------------------------------------------------

(beancount_file
  (transaction
    date: (date)
    flag: (flag)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (unary_num_expr
            (number))
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))
          date: (date)))))
  (transaction
    date: (date)
    flag: (flag)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))))))
  (transaction
    date: (date)
    flag: (flag)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))
          date: (date)))))
  (transaction
    date: (date)
    flag: (flag)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))
          date: (date)))
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))
          date: (date)))))
  (transaction
    date: (date)
    flag: (flag)
    tags_and_links: (tags_and_links
      (tag))
    postings: (postings
      (posting
        account: (account)
        amount: (amount
          number: (number)
          currency: (currency))
        cost_spec: (cost
          compound_amount: (compound_amount
            number_per: (number)
            currency: (currency))
          date: (date))))))
